syntax = "proto3";
package greeter;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  float temp = 2;
  float pres = 3;
  float humi = 4;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
